--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <div class="messages" id="messages"></div>
 <div class="input" id="chatInput" style="display:none">
-<input id="msgInput" placeholder="Сообщение...">
+<input id="msgInput" type="text" lang="ru" placeholder="Сообщение..." autocomplete="off" inputmode="text">
 <button id="sendBtn">➤</button>
 </div>
 </div>
