--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <div class="messages" id="messages"></div>
 <div class="input" id="chatInput" style="display:none">
-<input id="msgInput" type="text" lang="ru" placeholder="Сообщение..." autocomplete="off" inputmode="text">
+<div id="msgInput" class="msg-input" contenteditable="true" lang="ru" placeholder="Сообщение..." autocomplete="off" inputmode="text"></div>
 <button id="sendBtn">➤</button>
 </div>
 </div>
