--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 </div>
 <button class="logout-btn" id="logoutBtn">Выйти</button>
 </div>
+<div class="chat-search">
+<input id="userSearchInput" placeholder="Найти пользователя по нику">
+<button id="userSearchBtn">🔍</button>
+</div>
 <div class="chat-list" id="chatList"></div>
 </div>
 
